Update CI and Unit tests